Started on event listener

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         
         
         </div>
-        <div class="right-column"> <h5 style="text-align: center">test</h5>
+        <div class="right-column"> <h5 style="text-align: center">Welcome to my RPN Calc!</h5>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet metus diam. Mauris porttitor commodo ex nec scelerisque. Ut a consequat leo, sed tristique massa. Aliquam vitae nisl porta, lobortis est at, fringilla diam. Sed pulvinar sollicitudin justo. Nam tincidunt, urna non efficitur dignissim, dui odio tincidunt nisi, in consequat dui purus a nisi. Duis congue sapien non tortor maximus, at ornare augue eleifend. Ut sit amet est viverra, rhoncus orci eu, malesuada magna. Ut eget elit libero. Phasellus vitae ante at urna semper dapibus in eget turpis.
 
