Fixed events, and input

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 <div class="main-container">
     <div class="left-column">
         <div class="stack-item">
-            <p>3 :</p><input class="w3-input" type="text" style="text-align: end">
+            <p>3 :</p><input class="w3-input" type="text" id="stk-3" style="text-align: end">
         </div>
         <div class="stack-item">
-            <p>2 :</p><input class="w3-input" type="text" style="text-align: end">
+            <p>2 :</p><input class="w3-input" type="text" id="stk-2" style="text-align: end">
         </div>
         <div class="stack-item">
-            <p>1 :</p><input class="w3-input" type="text" style="text-align: end">
+            <p>1 :</p><input class="w3-input" type="text" id="stk-1" style="text-align: end">
         </div>
         <div class="stack-item">
-            <p>0 :</p><input class="w3-input" type="text" style="text-align: end">
+            <p>0 :</p><input class="w3-input" type="text" id="stk-0" style="text-align: end">
         </div>
 
         <div class="parent">
