--- a/index.html
+++ b/index.html
@@ -17,20 +17,39 @@
 </head>
 <body>
 <div class="main-container">
-    <div class="left-column">
-        <div class="stack-item">
-            <p>3 :</p><input class="w3-input" type="text" id="stk-3" style="text-align: end">
-        </div>
-        <div class="stack-item">
-            <p>2 :</p><input class="w3-input" type="text" id="stk-2" style="text-align: end">
-        </div>
-        <div class="stack-item">
-            <p>1 :</p><input class="w3-input" type="text" id="stk-1" style="text-align: end">
-        </div>
-        <div class="stack-item">
-            <p>0 :</p><input class="w3-input" type="text" id="stk-0" style="text-align: end">
-        </div>
+    <div class="right-column"> <h5 style="text-align: center">Welcome to my RPN Calc!</h5>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sit amet metus diam. Mauris porttitor commodo ex nec scelerisque. Ut a consequat leo, sed tristique massa. Aliquam vitae nisl porta, lobortis est at, fringilla diam. Sed pulvinar sollicitudin justo. Nam tincidunt, urna non efficitur dignissim, dui odio tincidunt nisi, in consequat dui purus a nisi. Duis congue sapien non tortor maximus, at ornare augue eleifend. Ut sit amet est viverra, rhoncus orci eu, malesuada magna. Ut eget elit libero. Phasellus vitae ante at urna semper dapibus in eget turpis.
 
+            Morbi egestas felis sapien. In vitae velit nec mauris pretium sollicitudin. Etiam vel turpis dolor. Nullam iaculis tortor vitae sem eleifend fermentum. In fermentum consectetur tempus. Praesent imperdiet dictum augue elementum viverra. Maecenas at orci rutrum, ullamcorper ex quis, ullamcorper orci. Cras at felis vulputate, porta odio sed, pretium urna. Praesent id dignissim sem, vitae euismod arcu. Aenean placerat orci in nunc ornare blandit. Mauris sollicitudin sem in erat aliquam laoreet et et tellus. Nunc sed finibus purus. Praesent tincidunt orci ac blandit rhoncus. Morbi aliquam, est vel vulputate condimentum, tellus libero mollis lorem, id pretium eros metus tristique eros.
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+        </p>
+    </div>
+    <div class="center-column">
+        <div class="stack-item">
+            <input class="w3-input" type="text" id="stk-3">
+        </div>
+        <div class="stack-item">
+            <input class="w3-input" type="text" id="stk-2">
+        </div>
+        <div class="stack-item">
+            <input class="w3-input" type="text" id="stk-1">
+        </div>
+        <div class="stack-item">
+            <input class="w3-input" type="text" id="stk-0">
+        </div>
+        <div class="spacer">
+        </div>
         <div class="parent">
             <div class="div1"> <button class="calc-btn w3-button w3-white w3-border">Enter</button></div>
             <div class="div2"><button class="calc-btn w3-button w3-white w3-border">+</button></div>
@@ -53,8 +72,8 @@
             <div class="div19"><button class="calc-btn w3-button w3-white w3-border">POW</button></div>
             <div class="div20"><button class="calc-btn w3-button w3-white w3-border">AC</button></div>
             <div class="div21"><button class="calc-btn w3-button w3-white w3-border">0</button></div>
-            <div class="div22"><button class="calc-btn w3-button w3-white w3-border">%</button></div>
-            <div class="div23"><button class="calc-btn w3-button w3-white w3-border">Placeholder</button></div>
+            <div class="div22"><button class="calc-btn w3-button w3-white w3-border">.</button></div>
+            <div class="div23"><button class="calc-btn w3-button w3-white w3-border">%</button></div>
             <div class="div24"><button class="calc-btn w3-button w3-white w3-border">√</button></div>
             <div class="div25"><button class="calc-btn w3-button w3-white w3-border">C</button></div>
         </div>
