--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="spacer">
         </div>
-        <div class="parent">
+        <div class="w3-container parent">
             <div class="div1"> <button class="calc-btn w3-button w3-white w3-border">Enter</button></div>
             <div class="div2"><button class="calc-btn w3-button w3-white w3-border">+</button></div>
             <div class="div3"><button class="calc-btn w3-button w3-white w3-border">-</button></div>
